@@ -1,5 +1,6 @@
 2.0.0p1
 
+  new qstat -e option to only select jobs in executable queues (USC)
   $clienthost and $headnode removed, $pbsclient and $pbsserver added (USC)
   $PBS_HOME/server_name is now added to MOM's server list (USC)
   resmom transient TMPDIR (USC)
